# jsd_job_bot

./: .dependabotbot.json  .gitignore  .pylintrc  Pipfile  README.md  SECURITY.MD  buildpackages.sh  jsd_job_bot.ini.example  jsd_job_bot.py  openjsd  pyproject.toml  queuebot.py  setup.py
jsd_job_bot/: __init__.py  __main__.py
tests/: test_things.py
