[tool.poetry]
name = "jsd-job-bot"
version = "0.0.1"
description = "JIRA Service Desk Bot, does weird things."
authors = ["James Hodgkinson <james@terminaloutcomes.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
jira = "^3.2.0"
texttable = "^1.6.4"
python-dateutil = "^2.8.2"

[tool.poetry.dev-dependencies]
pylint = "^2.13.8"
pytest = "^7.1.2"
mypy = "^0.950"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
